---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 13.11.2024
  Changes:
    - Recipe Shield MK4.
    - Reduced the green scale of Night Vision.
  Bugfixes:
    - NVG's MK2 was not activating at night. 
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 11.11.2024
  Changes:
    - MK5 Roboport recipes.
  Bugfixes:
    - Enetity(Equipment).
    - Techtree scaling.
    - Mistakently using the hr textures on skeletone icon.
  Graphics:
    - Coloring have returned to inside the grids.
    - Removed old non hr texture files, the correct once.
    - Adjusted resoution regarding texture files.
    - Corrected the tech tree icon scale.
  Credits:
    - Discord: @Kira (Kirazy) for help on solving my texture problems.
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 11.11.2024
  Changes:
    - File/Code clean up
    - Changelog from 0.3.0 and up.
  Bugfixes:
    - Spidertron was still blocked behind the old named "Fusion Reactor" not new "Fission Reactor", after name change.
  Info:
    - Experimental only. Until 2.0.16 becomes stable.
  Credits:
    - @bigjohn8141 #8141 for bug report Discord:Spidertron research blocked.
    - Basegame & Kirazy's Changelog for showing the [space-age] in there changelog.
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 26.10.2024
  Changes:
    - [space-age] More Tech added.
    - Recipe Shield MK3
    - Roboport Mk10 Recipe number change.
  Bugfixes:
    - Changelog.
    - Wrong filter for item fission reactor stil used the 1.1 name not 2.0.
    - Corrected locals naming for Fusion - Fission.
    - Removed Un-used Locals from IR3.
    - Corrected some NO Locals left in English.
    - 2.0.16 items sound being global.
  Info: