@@ -43,6 +43,7 @@
 		"(?) space-spidertron",
 		"(?) SpaceModFeorasFork >= 1.2.9",
 		"(?) spidertron-extended >= 0.3.15",
+		"(?) SpidertronPatrols >= 2.5.3",
 		"(?) spidertrontiers-community-updates >= 0.2.27",
 		"(?) spidertrontiers >= 0.2.18",
 		"(?) SeaBlockMetaPack",
