@@ -5,7 +5,9 @@ Date: 13.11.2024
     - Recipe Shield MK4.
     - Reduced the green scale of Night Vision.
   Bugfixes:
-    - NVG's MK2 was not activating at night. 
+    - NVG's MK2 was not activating at night.
+  Modding:
+    - Added MK3 Skeleton tech pre-requesite in for spidertron with SpidertronPatrols. (No Bugs seen here) 0.3.5 or 0.3.6 @Big John.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.5
 Date: 11.11.2024
